refactor(zthTerminal3EndAutoRenew): improve code quality and maintainability
- Enhance code readability and formatting across multiple classes
- Optimize imports and remove unused ones
- Simplify and improve logic in various methods
- Use more modern Java features like Optional and Stream API effectively
- Refactor BossBar-related code and error handling